Adição de tags e classes

--- a/index.html
+++ b/index.html
@@ -20,23 +20,26 @@
 <body>
   <main>
     <section class="header__conteiner">
-      <h1 class="header__titulo">
-        Join our community
-      </h1>
+      <div class="section section__header">
+        <h1 class="header__titulo">
+          Join our community
+        </h1>
 
-      <h2 class="header__subtitulo">
-        30-day, hassle-free money back guarantee
-      </h2>
+        <h2 class="header__subtitulo">
+          30-day, hassle-free money back guarantee
+        </h2>
 
-      <p class="header__paragrafo">
-        Gain access to our full library of tutorials along with expert code reviews.
-        Perfect for any developers who are serious about honing their skills.
-      </p>
+        <p class="header__paragrafo">
+          Gain access to our full library of tutorials along with expert code reviews.
+          Perfect for any developers who are serious about honing their skills.
+        </p>
+      </div>
     </section>
 
 
     <div class="cards__conteiner">
-      <section class="card--plano">
+    <section class="card--plano">
+      <div class="section section__card--plano">
         <h1 class="card--plano__titulo">
           Monthly Subscription
         </h1>
@@ -46,19 +49,24 @@
         </h2>
         <p class="card--plano__paragrafo">Full access for less than $1 a day</p>
         <button type="button" name="button" class="card--plano__button">Sign Up</button>
+      </div>
       </section>
 
       <section class="card__info">
+        <div class="section section__card__info">
         <h1 class="card__info__titulo">Why Us</h1>
-        <p class="card__info__paragrafo">
-          Tutorials by industry experts
-          Peer &amp; expert code review
-          Coding exercises
-          Access to our GitHub repos
-          Community forum
-          Flashcard decks
-          New videos every week
-        </p>
+        <div class="card__info__lista">
+          <ul>
+            <li>Tutorials by industry experts</li>
+            <li>Peer &amp; expert code review</li>
+            <li>Coding exercises</li>
+            <li>Access to our GitHub repos</li>
+            <li>Community forum</li>
+            <li>Flashcard decks</li>
+            <li>New videos every week</li>
+          </ul>
+        </div>
+      </div>
       </section>
     </div>
   </main>
